src/app/pages/subjects/subjects.scss
@import 'variables';

$light-gray: #f5f5f5;
$lightest-gray: #fafafa;
$light-line: #e0e0e0;
$text-black: rgba(0, 0, 0, 0.87);
$text-black2: rgba(0, 0, 0, 0.7);
$text-black3: rgba(0, 0, 0, 0.54);

.text-content {
    color: $text-black;
    font-family: Lato;

    h1 {
        font-weight: 900;
    }

    header {
        background: $page-top-gradient;
        font-size: large;
        padding: 5rem 10rem;
        text-align: center;
    }

    .subhead {
        font-size: 1.5rem;
    }

    .feature-block {
        display: flex;
        font-size: initial;
        justify-content: space-around;
        margin-top: 3rem;

        > .blurb {
            .title {
                font-weight: bold;
            }

            .text {
                max-width: 30rem;
            }
        }
    }

    .button-row {
        display: flex;
        justify-content: center;

        .filter-buttons {
            background-color: $lightest-gray;
            color: $text-black3;
            font-size: 120%;
            position: relative;
            transform: translateY(50%);

            .filter-button {
                border: thin solid $light-line;
                cursor: pointer;
                display: table-cell;
                padding: 1rem 2rem;

                &.selected {
                    color: $text-black;
                }
            }
        }
    }

    .book-viewer {
        background-color: $light-gray;
        padding: 5rem 10rem;

        .subject {
            color: $text-black2;
            font-size: 120%;
            font-style: italic;
            font-weight: 500;
        }

        .row-of-covers {
            display: flex;
            justify-content: flex-start;
        }

        .cover {
            cursor: pointer;
            padding-right: 2rem;

            &.selected {
                .tooltip {
                    display: block;
                }

                img {
                    box-shadow: 0 0 1rem neutral-color(light);
                }
            }
        }

        .options {
            font-size: initial;
            line-height: 3rem;

            .option {
                border-bottom: 0.2rem solid $divider-gray;
                padding: 1rem 2rem;

                &:last-child {
                    border: 0;
                }
            }

            .fa {
                font-size: larger;
            }
        }

        .tooltip {
            background-color: color(neutral-lightest);
            display: none;
            filter: drop-shadow(rgba(color(neutral-lightest), 0.4) 0 0.2rem 0.5rem);
            max-width: 25rem;
            min-height: 10rem;
            min-width: 10rem;
            position: absolute;
            z-index: 2;

            &::before {
                border: 2rem solid;
                border-color: transparent transparent color(neutral-lightest);
                bottom: 100%;
                content: '';
                left: 50%;
                margin-left: -2rem;
                position: absolute;
            }
        }

        .book-info {
            background-color: color(neutral-lightest);
            height: 10rem;
            position: relative;
            z-index: 2;

            .option {
                color: color(cyan);
            }
        }

        .cta {
            padding: 2rem;
        }
    }
}

